--- a/package.json
+++ b/package.json
@@ -21,9 +21,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-sns": "1.127.0",
-    "@aws-cdk/aws-sns-subscriptions": "1.127.0",
-    "@aws-cdk/aws-sqs": "1.127.0",
+    "@aws-cdk/aws-dynamodb": "^1.127.0",
     "@aws-cdk/core": "1.127.0"
   }
 }
