--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.127.0",
     "@aws-cdk/aws-dynamodb": "^1.127.0",
-    "@aws-cdk/core": "1.127.0"
+    "@aws-cdk/aws-lambda": "^1.127.0",
+    "@aws-cdk/core": "1.127.0",
+    "aws-sdk": "^2.1004.0"
   }
 }
